# icpmsflow

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  environment-all.yml  environment.yml  setup.cfg  tox.ini
.github/: ISSUE_TEMPLATE.md
conda_dist/icpmsflow-all/: meta.yaml
docs/: Makefile  api_automodule.rst  api_autosummary.rst  conf.py  demo.ipynb  index.rst  installation.rst  make.bat  usage.rst
examples/noisy_data/: 001SMPL.csv  002SMPL.csv  003SMPL.csv  004SMPL.csv  005SMPL.csv  006SMPL.csv  007SMPL.csv  008SMPL.csv  009SMPL.csv  010SMPL.csv  011SMPL.csv  012SMPL.csv  013SMPL.csv  014SMPL.csv  015SMPL.csv  016SMPL.csv  017SMPL.csv  018SMPL.csv  019SMPL.csv  020SMPL.csv  icpmsflow_tutorial.ipynb  noisy_data.ipynb
examples/tutorial/: 001SMPL-13.csv  001SMPL-7.csv
icpmsflow/: __init__.py  _plotbounds.py  core.py  interface.py  plotbounds.py  plotbounds2.py  plotbounds_old.py
notebooks/: 001SMPL-1.csv  001SMPL-10.csv  001SMPL-11.csv  001SMPL-12.csv  001SMPL-2.csv  001SMPL-3.csv  001SMPL-4.csv  001SMPL-5.csv  001SMPL-6.csv  001SMPL-8.csv  001SMPL-9.csv  example.tgz  example_read_and_integrate.ipynb  example_usage.ipynb  icpmsflow_tutorial.ipynb  icpmsflow_tutorial_indexing.ipynb
tests/: __init__.py  conftest.py  test_import.py  test_synthetic.py
