
[metadata]
name = icpmsflow
author = William P. Krekelberg
author_email = wpk@nist.gov
license= NIST license
license_files = LICENSE
description = Package to work with icpms data
# if using markdown
# long_description_content_type = text/markdown
long_description = file: README.rst, HISTORY.rst, LICENSE
keywords = icpmsflow
url = https://github.com/wpk-nist-gov/icpmsflow
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: Public Domain
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering



[options]
packages = find:
zip_safe = True # if using mypy, must be False
include_package_data = True
python_requires = >=3.6
install_requires =
    setuptools >= 38.4
    # additional packages
    numpy
    pandas
    scipy

setup_requires =
    setuptools >= 38.4
    setuptools_scm


[options.extras_require]
all =
    openpyxl
    holoviews
    bokeh
    matplotlib
    jupyter





[aliases]
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests


[isort]
profile = black
skip_gitignore = true
force_to_top = true
default_section = THIRDPARTY
known_first_party = icpmsflow

[flake8]
ignore =
    E203 # whitespace before ':' - doesn't work well with black
    E402 # module level import not at top of file
    E501 # line too long - let black worry about that
    E731 # do not assign a lambda expression, use a def
    W503 # line break before binary operator
exclude=
    .eggs
    doc
    docs
